src/main/gen/com/yuewen/intellij/jce/language/parser/JceParser.java
// This is a generated file. Not intended for manual editing.
package com.yuewen.intellij.jce.language.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.yuewen.intellij.jce.language.psi.JceTypes.*;
import static com.yuewen.intellij.jce.language.parser.JceParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class JceParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return JCE_FILE(b, l + 1);
  }

  /* ********************************************************** */
  // TRUE | FALSE
  static boolean BOOL_VALUES(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BOOL_VALUES")) return false;
    if (!nextTokenIs(b, "", FALSE, TRUE)) return false;
    boolean r;
    r = consumeToken(b, TRUE);
    if (!r) r = consumeToken(b, FALSE);
    return r;
  }

  /* ********************************************************** */
  // (UNSIGNED UNSIGNED_NUMS) | NUMBER_TYPES | BOOL | STRING
  public static boolean BUILT_IN_TYPES(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BUILT_IN_TYPES")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BUILT_IN_TYPES, "<built in types>");
    r = BUILT_IN_TYPES_0(b, l + 1);
    if (!r) r = NUMBER_TYPES(b, l + 1);
    if (!r) r = consumeToken(b, BOOL);
    if (!r) r = consumeToken(b, STRING);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // UNSIGNED UNSIGNED_NUMS
  private static boolean BUILT_IN_TYPES_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BUILT_IN_TYPES_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, UNSIGNED);
    r = r && UNSIGNED_NUMS(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // EQUAL (BOOL_VALUES | STRING_LITERAL | NUMBERS)
  public static boolean CONST_ASSIGNMENT(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CONST_ASSIGNMENT")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CONST_ASSIGNMENT, "<const assignment>");
    r = consumeToken(b, EQUAL);
    p = r; // pin = 1
    r = r && CONST_ASSIGNMENT_1(b, l + 1);
    exit_section_(b, l, m, r, p, CONST_ASSIGNMENT_RECOVERY_parser_);
    return r || p;
  }

  // BOOL_VALUES | STRING_LITERAL | NUMBERS
  private static boolean CONST_ASSIGNMENT_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CONST_ASSIGNMENT_1")) return false;
    boolean r;
    r = BOOL_VALUES(b, l + 1);
    if (!r) r = consumeToken(b, STRING_LITERAL);
    if (!r) r = NUMBERS(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // !(COMMA | SEMICOLON | CLOSE_BLOCK | STRUCT | ENUM | INTERFACE | CONST)
  static boolean CONST_ASSIGNMENT_RECOVERY(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CONST_ASSIGNMENT_RECOVERY")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !CONST_ASSIGNMENT_RECOVERY_0(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // COMMA | SEMICOLON | CLOSE_BLOCK | STRUCT | ENUM | INTERFACE | CONST
  private static boolean CONST_ASSIGNMENT_RECOVERY_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CONST_ASSIGNMENT_RECOVERY_0")) return false;
    boolean r;
    r = consumeToken(b, COMMA);
    if (!r) r = consumeToken(b, SEMICOLON);
    if (!r) r = consumeToken(b, CLOSE_BLOCK);
    if (!r) r = consumeToken(b, STRUCT);
    if (!r) r = consumeToken(b, ENUM);
    if (!r) r = consumeToken(b, INTERFACE);
    if (!r) r = consumeToken(b, CONST);
    return r;
  }

  /* ********************************************************** */
  // CONST BUILT_IN_TYPES IDENTIFIER CONST_ASSIGNMENT SEMICOLON
  public static boolean CONST_TYPE(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CONST_TYPE")) return false;
    if (!nextTokenIs(b, CONST)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CONST_TYPE, null);
    r = consumeToken(b, CONST);
    p = r; // pin = 1
    r = r && report_error_(b, BUILT_IN_TYPES(b, l + 1));
    r = p && report_error_(b, consumeToken(b, IDENTIFIER)) && r;
    r = p && report_error_(b, CONST_ASSIGNMENT(b, l + 1)) && r;
    r = p && consumeToken(b, SEMICOLON) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // IDENTIFIER (EQUAL NUM_INT)?
  public static boolean ENUM_MEMBER(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ENUM_MEMBER")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ENUM_MEMBER, "<enum member>");
    r = consumeToken(b, IDENTIFIER);
    p = r; // pin = 1
    r = r && ENUM_MEMBER_1(b, l + 1);
    exit_section_(b, l, m, r, p, ENUM_MEMBER_RECOVERY_parser_);
    return r || p;
  }

  // (EQUAL NUM_INT)?
  private static boolean ENUM_MEMBER_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ENUM_MEMBER_1")) return false;
    ENUM_MEMBER_1_0(b, l + 1);
    return true;
  }

  // EQUAL NUM_INT
  private static boolean ENUM_MEMBER_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ENUM_MEMBER_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, EQUAL, NUM_INT);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // !(COMMA | SEMICOLON | CLOSE_BLOCK)
  static boolean ENUM_MEMBER_RECOVERY(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ENUM_MEMBER_RECOVERY")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !ENUM_MEMBER_RECOVERY_0(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // COMMA | SEMICOLON | CLOSE_BLOCK
  private static boolean ENUM_MEMBER_RECOVERY_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ENUM_MEMBER_RECOVERY_0")) return false;
    boolean r;
    r = consumeToken(b, COMMA);
    if (!r) r = consumeToken(b, SEMICOLON);
    if (!r) r = consumeToken(b, CLOSE_BLOCK);
    return r;
  }

  /* ********************************************************** */
  // ENUM IDENTIFIER OPEN_BLOCK (ENUM_MEMBER)?(COMMA ENUM_MEMBER)* (COMMA)? CLOSE_BLOCK SEMICOLON
  public static boolean ENUM_TYPE(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ENUM_TYPE")) return false;
    if (!nextTokenIs(b, ENUM)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ENUM_TYPE, null);
    r = consumeTokens(b, 1, ENUM, IDENTIFIER, OPEN_BLOCK);
    p = r; // pin = 1
    r = r && report_error_(b, ENUM_TYPE_3(b, l + 1));
    r = p && report_error_(b, ENUM_TYPE_4(b, l + 1)) && r;
    r = p && report_error_(b, ENUM_TYPE_5(b, l + 1)) && r;
    r = p && report_error_(b, consumeTokens(b, -1, CLOSE_BLOCK, SEMICOLON)) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // (ENUM_MEMBER)?
  private static boolean ENUM_TYPE_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ENUM_TYPE_3")) return false;
    ENUM_TYPE_3_0(b, l + 1);
    return true;
  }

  // (ENUM_MEMBER)
  private static boolean ENUM_TYPE_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ENUM_TYPE_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ENUM_MEMBER(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA ENUM_MEMBER)*
  private static boolean ENUM_TYPE_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ENUM_TYPE_4")) return false;
    while (true) {
      int c = current_position_(b);
      if (!ENUM_TYPE_4_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ENUM_TYPE_4", c)) break;
    }
    return true;
  }

  // COMMA ENUM_MEMBER
  private static boolean ENUM_TYPE_4_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ENUM_TYPE_4_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && ENUM_MEMBER(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA)?
  private static boolean ENUM_TYPE_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ENUM_TYPE_5")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  /* ********************************************************** */
  // EQUAL STRING_LITERALS
  public static boolean FIELD_DEFAULT_ASSIGNMENT(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FIELD_DEFAULT_ASSIGNMENT")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, FIELD_DEFAULT_ASSIGNMENT, "<field default assignment>");
    r = consumeToken(b, EQUAL);
    p = r; // pin = 1
    r = r && STRING_LITERALS(b, l + 1);
    exit_section_(b, l, m, r, p, FIELD_INFO_RECOVERY__parser_);
    return r || p;
  }

  /* ********************************************************** */
  // FIELD_TAG FIELD_LABEL FIELD_TYPE IDENTIFIER FIELD_DEFAULT_ASSIGNMENT? SEMICOLON
  public static boolean FIELD_INFO(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FIELD_INFO")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, FIELD_INFO, "<field info>");
    r = FIELD_TAG(b, l + 1);
    p = r; // pin = 1
    r = r && report_error_(b, FIELD_LABEL(b, l + 1));
    r = p && report_error_(b, FIELD_TYPE(b, l + 1)) && r;
    r = p && report_error_(b, consumeToken(b, IDENTIFIER)) && r;
    r = p && report_error_(b, FIELD_INFO_4(b, l + 1)) && r;
    r = p && consumeToken(b, SEMICOLON) && r;
    exit_section_(b, l, m, r, p, FIELD_INFO_RECOVERY__parser_);
    return r || p;
  }

  // FIELD_DEFAULT_ASSIGNMENT?
  private static boolean FIELD_INFO_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FIELD_INFO_4")) return false;
    FIELD_DEFAULT_ASSIGNMENT(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // !(SEMICOLON | FIELD_TAG (FIELD_LABEL | FIELD_TYPE) | CLOSE_BLOCK | STRUCT | ENUM | CONST | INTERFACE | KEY)
  static boolean FIELD_INFO_RECOVERY_(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FIELD_INFO_RECOVERY_")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !FIELD_INFO_RECOVERY__0(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // SEMICOLON | FIELD_TAG (FIELD_LABEL | FIELD_TYPE) | CLOSE_BLOCK | STRUCT | ENUM | CONST | INTERFACE | KEY
  private static boolean FIELD_INFO_RECOVERY__0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FIELD_INFO_RECOVERY__0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, SEMICOLON);
    if (!r) r = FIELD_INFO_RECOVERY__0_1(b, l + 1);
    if (!r) r = consumeToken(b, CLOSE_BLOCK);
    if (!r) r = consumeToken(b, STRUCT);
    if (!r) r = consumeToken(b, ENUM);
    if (!r) r = consumeToken(b, CONST);
    if (!r) r = consumeToken(b, INTERFACE);
    if (!r) r = consumeToken(b, KEY);
    exit_section_(b, m, null, r);
    return r;
  }

  // FIELD_TAG (FIELD_LABEL | FIELD_TYPE)
  private static boolean FIELD_INFO_RECOVERY__0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FIELD_INFO_RECOVERY__0_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = FIELD_TAG(b, l + 1);
    r = r && FIELD_INFO_RECOVERY__0_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // FIELD_LABEL | FIELD_TYPE
  private static boolean FIELD_INFO_RECOVERY__0_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FIELD_INFO_RECOVERY__0_1_1")) return false;
    boolean r;
    r = FIELD_LABEL(b, l + 1);
    if (!r) r = FIELD_TYPE(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // REQUIRE | OPTIONAL
  public static boolean FIELD_LABEL(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FIELD_LABEL")) return false;
    if (!nextTokenIs(b, "<require or optional>", OPTIONAL, REQUIRE)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FIELD_LABEL, "<require or optional>");
    r = consumeToken(b, REQUIRE);
    if (!r) r = consumeToken(b, OPTIONAL);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // NUM_INT
  public static boolean FIELD_TAG(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FIELD_TAG")) return false;
    if (!nextTokenIs(b, "<field tag>", NUM_INT)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FIELD_TAG, "<field tag>");
    r = consumeToken(b, NUM_INT);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // BUILT_IN_TYPES | USER_DEFINE_TYPE | MAP_TYPE | VECTOR_TYPE
  public static boolean FIELD_TYPE(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FIELD_TYPE")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FIELD_TYPE, "<field type>");
    r = BUILT_IN_TYPES(b, l + 1);
    if (!r) r = USER_DEFINE_TYPE(b, l + 1);
    if (!r) r = MAP_TYPE(b, l + 1);
    if (!r) r = VECTOR_TYPE(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // OUT
  public static boolean FIELD_TYPE_MODIFIER(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FIELD_TYPE_MODIFIER")) return false;
    if (!nextTokenIs(b, OUT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OUT);
    exit_section_(b, m, FIELD_TYPE_MODIFIER, r);
    return r;
  }

  /* ********************************************************** */
  // RETURN_TYPE IDENTIFIER OPEN_PARENTHESIS FUNCTION_PARAM_LIST? CLOSE_PARENTHESIS SEMICOLON
  public static boolean FUNCTION_INFO(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FUNCTION_INFO")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, FUNCTION_INFO, "<function info>");
    r = RETURN_TYPE(b, l + 1);
    p = r; // pin = 1
    r = r && report_error_(b, consumeTokens(b, -1, IDENTIFIER, OPEN_PARENTHESIS));
    r = p && report_error_(b, FUNCTION_INFO_3(b, l + 1)) && r;
    r = p && report_error_(b, consumeTokens(b, -1, CLOSE_PARENTHESIS, SEMICOLON)) && r;
    exit_section_(b, l, m, r, p, FUNCTION_INFO_RECOVERY_parser_);
    return r || p;
  }

  // FUNCTION_PARAM_LIST?
  private static boolean FUNCTION_INFO_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FUNCTION_INFO_3")) return false;
    FUNCTION_PARAM_LIST(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // !(COMMA | RETURN_TYPE | CLOSE_BLOCK | SEMICOLON | CLOSE_PARENTHESIS)
  static boolean FUNCTION_INFO_RECOVERY(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FUNCTION_INFO_RECOVERY")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !FUNCTION_INFO_RECOVERY_0(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // COMMA | RETURN_TYPE | CLOSE_BLOCK | SEMICOLON | CLOSE_PARENTHESIS
  private static boolean FUNCTION_INFO_RECOVERY_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FUNCTION_INFO_RECOVERY_0")) return false;
    boolean r;
    r = consumeToken(b, COMMA);
    if (!r) r = RETURN_TYPE(b, l + 1);
    if (!r) r = consumeToken(b, CLOSE_BLOCK);
    if (!r) r = consumeToken(b, SEMICOLON);
    if (!r) r = consumeToken(b, CLOSE_PARENTHESIS);
    return r;
  }

  /* ********************************************************** */
  // FIELD_TYPE_MODIFIER? FIELD_TYPE IDENTIFIER
  public static boolean FUNCTION_PARAM(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FUNCTION_PARAM")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, FUNCTION_PARAM, "<function param>");
    r = FUNCTION_PARAM_0(b, l + 1);
    r = r && FIELD_TYPE(b, l + 1);
    p = r; // pin = 2
    r = r && consumeToken(b, IDENTIFIER);
    exit_section_(b, l, m, r, p, FUNCTION_PARAM_RECOVERY_parser_);
    return r || p;
  }

  // FIELD_TYPE_MODIFIER?
  private static boolean FUNCTION_PARAM_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FUNCTION_PARAM_0")) return false;
    FIELD_TYPE_MODIFIER(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // FUNCTION_PARAM (COMMA FUNCTION_PARAM)*
  public static boolean FUNCTION_PARAM_LIST(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FUNCTION_PARAM_LIST")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FUNCTION_PARAM_LIST, "<function param list>");
    r = FUNCTION_PARAM(b, l + 1);
    r = r && FUNCTION_PARAM_LIST_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (COMMA FUNCTION_PARAM)*
  private static boolean FUNCTION_PARAM_LIST_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FUNCTION_PARAM_LIST_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!FUNCTION_PARAM_LIST_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "FUNCTION_PARAM_LIST_1", c)) break;
    }
    return true;
  }

  // COMMA FUNCTION_PARAM
  private static boolean FUNCTION_PARAM_LIST_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FUNCTION_PARAM_LIST_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && FUNCTION_PARAM(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }
